Fixed SW, added tabindex and aria, improved contrast

--- a/css/details.css
+++ b/css/details.css
@@ -7,7 +7,6 @@
 
 .inside {
   width:100%;
-  background-color: #f18200;
 }
 
 .inside header {
@@ -66,9 +65,9 @@
 }
 
 #restaurant-name {
-  color: #f18200;
+  color: #252831;
   font-family: Arial,sans-serif;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   font-weight: 200;
   letter-spacing: 0;
   margin: 1rem 0 2rem;
@@ -85,15 +84,15 @@
 }
 
 #restaurant-address {
-  font-size: .8rem;
+  font-size: 1rem;
   margin: 10px 0px;
 }
 
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: .8rem;
-  font-weight: 300;
+  font-size: 1.2rem;
+  font-weight: 400;
   letter-spacing: 10px;
   margin: 0 0 20px;
   padding: 1rem 0;
@@ -108,9 +107,9 @@
   order: 2;
 }
 
-#reviews-container h2 {
-color: #f58500;
-font-size: 1.8rem;
+#reviews-container h3 {
+color: #252831;
+font-size: 1.6rem;
 font-weight: 300;
 letter-spacing: -1px;
 padding-bottom: 1pt;
@@ -141,5 +140,6 @@ padding-bottom: 1pt;
 }
 
 #restaurant-hours td {
+  font-size: .8rem;
   color: #666;
 }
