--- a/css/filter.css
+++ b/css/filter.css
@@ -3,14 +3,14 @@
     width: 100%;
     padding: .5rem;
         /* height: 50px;*/
-    background-color: #3397DB;
+    background-color: #1b2235;
     align-items: center;
   }
 
   .filter-options h2 {
     color: white;
     font-size: 1rem;
-    font-weight: normal;
+    font-weight: bold;
     line-height: 1;
     margin: 0 20px;
   }
