--- a/css/listing.css
+++ b/css/listing.css
@@ -57,7 +57,6 @@
   }
 }
 
-
   #restaurants-list picture.restaurant-img img {
     background-color: #ccc;
     display: block;
@@ -67,11 +66,10 @@
     max-width: 100%;
   }
 
-
-  #restaurants-list div h1 {
-    color: #f18200;
+  #restaurants-list div h2 {
+    color: #252831;
     font-family: Arial,sans-serif;
-    font-size: 14pt;
+    font-size: 1.2rem;
     font-weight: 200;
     letter-spacing: 0;
     line-height: 1.3;
@@ -79,13 +77,15 @@
     text-transform: uppercase;
     white-space: normal;
   }
+
   #restaurants-list p {
     margin: 0;
-    font-size: 11pt;
+    font-size: 1rem;
     white-space: normal;
   }
+  
   #restaurants-list div a {
-    background-color: orange;
+    background-color: #252831;
     border-bottom: 3px solid #eee;
     color: #fff;
     display: inline-block;
